Small touches to about files

--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -12,7 +12,7 @@
         <h1>About Mosquito Alert</h1>
     </div>
 
-    <p>This project is coordinated by the following institutions: <a href="http://www.icrea.cat/en">ICREA</a>, <a href="http://www.ceab.csic.es/en">CEAB-CSIC</a> and <a href="http://www.creaf.cat/en">CREAF</a>.</p>
+    <p>This project is coordinated by the following institutions: <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> and <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
@@ -20,7 +20,8 @@
     <p class='centeredImage'>
        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
     </p>
-    <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a>, the <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministry of Economy and Competitiveness</a>, the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a> and the <a href="http://www.lokimica.com">Lokímica</a> private company.</p>
+    <br>
+    <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a>, the <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministry of Economy and Competitiveness</a> and the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a>.</p>
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}></a>
     </p>
