--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -12,7 +12,7 @@
         <h1>Sobre Mosquito Alert</h1>
     </div>
 
-    <p>Este proyecto está coordinado por las instituciones <a href="http://www.icrea.cat/es">ICREA</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.creaf.cat/es">CREAF</a>.</p>
+    <p>Este proyecto está coordinado por las instituciones <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
@@ -20,7 +20,8 @@
     <p class='centeredImage'>
        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
     </p>
-    <p>El proyecto está cofinanciado por el <a href="http://www.dipsalut.cat">Organismo Autónomo de Salud Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministerio de Economía y Competitividad</a>, la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a> i la empresa <a href="http://www.lokimica.com">Lokímica</a>.</p>
+    <br>
+    <p>El proyecto está cofinanciado por el <a href="http://www.dipsalut.cat">Organismo Autónomo de Salud Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministerio de Economía y Competitividad</a> i la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a>.</p>
     <p class='centeredImage'>
         <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}></a>
     </p>
