--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -12,7 +12,7 @@
         <h1>Sobre Mosquito Alert</h1>
     </div>
 
-    <p>Aquest projecte està coordinat per les institucions <a href="http://www.icrea.cat/">ICREA</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.creaf.cat/">CREAF</a>.</p>
+    <p>Aquest projecte està coordinat per les institucions <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> i <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class="centeredImage">
         <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_coord.jpg" %}></a>
     </p>
@@ -20,7 +20,8 @@
     <p class="centeredImage">
         <img style="max-width: 100%; height: auto;" src={% static "tigahelp/lacaixa.jpg" %}>
     </p>
-    <p>El projecte està cofinançat per l’ <a href="http://www.dipsalut.cat">Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministeri d’Economia i Competitivitat</a>, la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a> i l’empresa <a href="http://www.lokimica.com">Lokímica</a>.</p>
+    <br>
+    <p>El projecte està cofinançat per l’ <a href="http://www.dipsalut.cat">Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministeri d’Economia i Competitivitat</a> i la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a>.</p>
     <p class="centeredImage">
         <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_financ.jpg" %}></a>
     </p>
