Added latest versions of tigahelp

--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -14,7 +14,7 @@
 
     <p>This project is coordinated by the following institutions: <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> and <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}></a>
+        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}>
     </p>
     <p>Since 2015 the project has been funded by <a href="http://obrasociallacaixa.org/en/home">Obra Social “la Caixa”</a>.</p>
     <p class='centeredImage'>
@@ -23,7 +23,7 @@
     <br>
     <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a>, the <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministry of Economy and Competitiveness</a> and the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a>.</p>
     <p class='centeredImage'>
-        <a href='/credits/'><img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}></a>
+        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}>
     </p>
 
 
