--- a/tigahelp/templates/tigahelp/help_en.html
+++ b/tigahelp/templates/tigahelp/help_en.html
@@ -8,31 +8,33 @@
 
 {% block content %}
 
-<h1><b>PARTICIPATE</b></h1>
+<h1>PARTICIPATE</h1>
+Fight against mosquito-borne diseases. If you see a tiger mosquito (<i>Aedes albopictus</i>) or a yellow fever mosquito (<i>Aedes aegypti</i>) notify it with the Mosquito Alert app. You can also do it if you see breeding sites at the public road.
 
-<p>Participate in the study and real-time monitoring of tiger mosquitoes (<i>Aedes albopictus</i>) and yellow fever mosquitoes (<i>Aedes aegypti</i>) by sending reports of possible sightings of these species and their breeding sites. Stay informed and learn to combat these mosquitoes in and around your home.</p>
 
-<h2>Learn about Ae. albopictus and Ae. aegypti</h2>
+<h2>Learn how to identify them</h2>
+We teach you how to easily differentiate them from other mosquitoes in our website <a href="http://mosquitoalert.com">mosquitoalert.com</a>. You can also see different tips to make good photos.
 
-Learn to recognize these two species (and make sure not to confuse them with other mosquitoes). Learn about their life cycle and breeding sites. The app and the <a href="http://mosquitoalert.com">mosquitoalert.com</a> website contain all the information necessary for gathering quality data.
+<h2>Send your reports</h2>
+Use the “REPORT” buttons to send reports on breeding sites in public places and sightings of adult tiger and yellow fever mosquitoes. You'll find detailed information by clicking the (i) icons.
 
-<h2>Begin sharing data </h2>
-Use the "REPORT" buttons on the main screen to send reports on breeding sites in public spaces and sightings of adult tiger and yellow fever mosquitoes. You'll find detailed information by clicking the (i) icons.
+<h2>Keep your reports updated</h2>
+If you want to edit or remove any report, use the “MY MAP” button and select it.
 
-<h2>Keep your information updated </h2>
-Use the "MY MAP" button to view your reports and edit them if necessary to update or correct information.
-
-<h2>Volunteer for missions</h2>
-If you are using the Android version of Mosquito Alert, you will be notified of special missions by an icon appearing on your device's status bar. You can complete the mission at any time, postpone it for later, or delete it from your device. Check pending missions from the options menu on the main screen.
+<h2>Participate in missions</h2>
+You will receive special missions in your device throughout the season. You will be able to do the mission, keep it undone or remove it if you don’t want to do it. Pending missions will be shown in the main menu.
 
 <h2>Explore other options</h2>
-Explore the options menus on each screen to access additional features. Change the base map style, share the app with friends, or check the latest news from <a href="http://mosquitoalert.com">mosquitoalert.com</a>.
+In each screen you can access additional features using the options menu. For example, in “MY MAP” you can choose the type the map, share the app from the main screen or see the latest news from <a href="http://mosquitoalert.com">Mosquito Alert</a>.
 
+<h1>WHERE IS YOUR SENT DATA</h1>
+The reports you submit using the app, with or without photos, go to the Mosquito Alert server and they appear automatically in the map of <a href="http://mosquitoalert.com">mosquitoalert.com</a>. This information is very useful to know the distribution of the tiger mosquito and the yellow fever mosquito. It can be shared with thirds parties or the public.
 
-<h1>YOUR DATA</h1>
-The information you submit goes to the Centre for Advanced Studies of Blanes (CEAB-CSIC), which is coordinating the Mosquito Alert project. The data will be used to learn more about the spread of tiger and yellow fever mosquitoes and may be shared with third parties or the public. Mosquito Alert also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area. The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected. Parts of the data you share will be automatically published on the web map at <a href="http://mosquitoalert.com">mosquitoalert.com</a>. At any time you can delete, edit and update the data published on this map from your phone by clicking the "MY MAP" button on the main screen and selecting a report.
+The Mosquito Alert app also collects coarse information on your location at random times throughout the day in order to generate a map of the areas being monitored by Mosquito Alert users, and to learn about the routes along which tiger and yellow fever mosquitoes may be spreading. These locations are masked by rounding your actual location to the nearest 0.05 degrees latitude and longitude, making it possible to know that you were in an area roughly the size of a small city like Blanes, but impossible to know where you were in that area.
 
-<h1>ADDITIONAL QUESTIONS</h1>
-Check the website or contact <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a> for more information.
+The locations are linked only to your randomly-generated user ID, and no personally-identifying information is collected
+
+<h1>DO YOU WANT MORE INFORMATION?</h1>
+Check our website <a href="http://mosquitoalert.com">mosquitoalert.com</a> or send us an email at <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
 
 {% endblock %}
