--- a/tigahelp/templates/tigahelp/help_es.html
+++ b/tigahelp/templates/tigahelp/help_es.html
@@ -9,28 +9,32 @@
 {% block content %}
 
 <h1>PARTICIPA</h1>
-Participa en el estudio y seguimiento a tiempo real del mosquito tigre (<i>Aedes albopictus</i>) y del mosquito de la fiebre amarilla (<i>Aedes aegypti</i>), enviando posibles hallazgos de estas dos especies y de sus lugares de cría. Infórmate de las últimas novedades y aprende a combatir estas dos especies en tu casa.
+Lucha contra los mosquitos que transmiten enfermedades. Si ves un mosquito tigre (<i>Aedes albopictus</i>) o un mosquito de la fiebre amarilla (<i>Aedes aegypti</i>) notifícalo con la app Mosquito Alert. También puedes avisar si ves un lugar de cría en la vía pública.
 
-<h2>Familiarízate con <i>Ae. albopictus</i> y <i>Ae. aegypti</i></h2>
-Aprende a reconocer estas dos especies (asegúrate de que no las confundes con otros mosquitos). Familiarízate con su ciclo de vida y con sus lugares de cría. La App y la web del proyecto <a href="http://mosquitoalert.com">mosquitoalert.com</a> contienen toda la información necesaria para que tus datos sean de calidad.
 
-<h2>Participa compartiendo datos</h2>
-Utiliza los botones “ENVIA” para enviar informes de nuevos lugares de cría en espacios públicos y de hallazgos de mosquito tigre o del mosquito de la fiebre amarilla. Encontrarás información detallada clicando el icono (i).
+<h2>Aprende a identificar estos mosquitos</h2>
+Te enseñamos a distinguirlos de otros mosquitos de una forma muy sencilla en nuestra página web <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Consulta nuestros trucos para hacer buenas fotos.
 
-<h2>Mantén tus datos actualizados</h2>
-Utiliza el botón “MI MAPA” para ver y controlar tus datos, editarlos si los quieres actualizar o corregir y eliminarlos si crees que son erróneos.
+<h2>Envía tus hallazgos</h2>
+Utiliza los botones “ENVÍA” para enviar informes de lugares de cría en espacios públicos e informes de mosquito tigre o de mosquito de la fiebre amarilla. Encontrarás más información en el icono (i).
 
-<h2>Participa en misiones</h2>
-Si utilizas la versión Android de Mosquito Alert, participa en misiones especiales si te aparece un icono especial en tu teléfono. En cualquier momento podrás realizar la misión, dejarla para más tarde, o eliminarla si no quieres participar. Consulta las misiones pendientes en el menú principal.
+<h2>Actualiza tus informes</h2>
+Si quieres editar o eliminar algún informe, entra en “MI MAPA” y selecciónalo.
+
+<h2>Participa en las misiones</h2>
+A lo largo de la temporada recibirás misiones especiales en tu móvil. En cualquier momento podrás realizar la misión, dejarla para más tarde o eliminarla si no quieres hacerla. Podrás ver la misiones pendientes en el menú principal.
 
 <h2>Explora otras opciones</h2>
-Explora el botón de configuración en cada pantalla para acceder a opciones extras. Cambia el mapa base, comparte la App o consulta las últimas noticias del proyecto <a href="http://mosquitoalert.com">Mosquito Alert</a>.
+En cada pantalla podrás acceder a más opciones con el botón de configuración. Por ejemplo, en “MI MAPA” puedes cambiar el tipo de mapa, puedes compartir la app desde la pantalla principal o bien consultar las últimas noticias de la plataforma  <a href="http://mosquitoalert.com">Mosquito Alert</a>.
 
+<h1>¿DÓNDE VAN LOS DATOS QUE ENVÍAS?</h1>
+Los avisos que envíes a través de la app, con o sin foto, se envían al servidor de Mosquito Alert y aparecerán de forma automática en el mapa de la plataforma <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Esta información es muy útil para conocer la distribución del mosquito tigre y del mosquito de la fiebre amarilla. Puede ser compartida con terceros o con el público general.
 
-<h1>DESTINO DE TUS DATOS</h1>
-Tus datos se enviarán al centro de investigación que coordina Mosquito Alert, el Centro de Estudios Avanzados de Blanes del Consejo Superior de Investigaciones Científicas (CEAB-CSIC). Los datos se utilizan para mejorar el conocimiento de la dispersión del mosquito tigre y del mosquito de la fiebre amarilla y de las ciencias ciudadanas y pueden ser compartidos con terceras partes o el público general. Mosquito Alert recoge también datos de la posición aproximada de tu teléfono móvil en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Mosquito Alert y para mejorar el conocimiento sobre las vías de dispersión de estas dos especies. Estos datos de posición son aproximados, y se recogen redondeando tu posición real a los 0.05 grados de latitud y longitud más cercanos. Este método hace que sea posible saber que estabas en un área aproximadamente del tamaño de una ciudad pequeña como Blanes, pero hace que sea imposible saber tu posición exacta dentro de esta área. Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal. Parte de tus datos enviados se publican de manera automática en el mapa web del proyecto <a href="http://mosquitoalert.com">mosquitoalert.com</a>. En cualquier momento puedes eliminar, editar y actualizar los datos publicados en el mapa web, desde el botón “MI MAPA”, seleccionando un informe.
+La app Mosquito Alert también recoge datos de la posición aproximada de tu dispositivo en intervalos de tiempo aleatorios. Esta información se utiliza para conocer y generar un mapa de las zonas exploradas por los usuarios de Mosquito Alert y para saber más sobre las vías de dispersión de estos mosquitos. Los datos de posición son aproximados y se recogen redondeando tu posición real a los 0.05 grados de latitud y longitud más cercanos. Con este método se puede saber tu ubicación dentro de una área del tamaño de una ciudad pequeña, pero en ningún caso se sabe tu posición exacta dentro de esta área.
 
-<h1>CONSULTA SI TIENES MÁS DUDAS</h1>
-Si tienes dudas, consulta la página web o escribe a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>s.
+Las localizaciones están unidas sólo a tu identificador, generado de manera aleatoria, pero a ninguna información que permita tu identificación personal.
+
+<h1>¿QUIERES MÁS INFORMACIÓN?</h1>
+Visita nuestra página web <a href="http://mosquitoalert.com">mosquitoalert.com</a> o escríbenos en <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
 
 {% endblock %}
