--- a/tigahelp/templates/tigahelp/terms_ca.html
+++ b/tigahelp/templates/tigahelp/terms_ca.html
@@ -12,37 +12,29 @@
         <h2>Acord de l'usuari</h2>
     </div>
 
-    <p>Mosquito Alert és un projecte de ciència ciutadana coordinat per l'ICREA - Laboratori d'Ecologia del Moviment
-        del Centre d'Estudis Avançats de Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Al
-        projecte també hi participa el Consell Superior d'Investigacions Científiques i la Universitat de Múrcia.
+    <p>
+        Mosquit Alert (d'ara en endavant, "el Projecte", en qualsevol dels noms que hagi pogut tenir en el passat o pugui adquirir en el futur) és un projecte de ciència ciutadana coordinat pel Centre d'Estudis Avançats de Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC) i el CREAF.
     </p>
 
-    <p>El projecte des basa en la recollida de dades sobre el mosquit tigre i el mosquit de la febre groga per parts dels ciutadans&mdash;ciutadans
-        científics. Els ciutadans poden participar compartint dades a través de les diferents aplicacions Mosquito Alert per
-        a dispositius mòbils. Per a això, cal que siguis major d'edat o que participis sota la supervisió d'un adult i
-        que estiguis d'acord amb la política de privacitat de Mosquito Alert, així com amb els següents termes:</p>
+    <p>
+        El Projecte depèn de la recollida de dades per part de la ciutadania sobre el mosquit tigre i el mosquit de la febre groga. Els ciutadans participen enviant i compartint, entre d'altres, dades i imatges, a través de les diferents aplicacions del Projecte per a dispositius mòbils o altres dispositius electrònics. Per a això, caldrà ser major d'edat o participar sota la supervisió d'un adult i estar d'acord amb la política de privacitat del Projecte, així com amb els termes d'ús:
+    </p>
 
     <ol>
         <li>
-            En compartir les teves dades amb el projecte Mosquito Alert, concedeixes als membres de l'equip
-            d'investigació una llicència perpètua, lliure de royaltis, no exclusiva i sub-llicenciable, per: usar,
-            reproduir, modificar, adaptar, publicar, traduir, crear treballs derivats, distribuir i exercir tots els
-            drets d'autor i de publicitat a tot el món pel que fa a la teva contribució i/o incorporar la teva
-            contribució en altres treballs en qualsevol mitjà conegut actualment o desenvolupat en el futur.
+            El mosquit tigre i el mosquit de la febre groga poden ser vectors de malalties com el dengue, el chikungunya o el Zika. El Projecte contribueix en la seva lluita, a partir de la recollida de dades i imatges (entre d'altres), l'anàlisi o estudi d'aquesta informació i la posada en marxa o col·laboració amb accions de sensibilització, seguiment o control. En ser vectors de malalties, en participar en el Projecte has extremar precaucions i no apropar-te de manera activa a aquestes espècies (directament o mitjançant els seus llocs de cria). Al lloc web del Projecte s'informa de com enviar dades i fotografies, entre d'altres, atrapant prèviament a aquestes espècies per evitar la seva picada. Acceptes que és la teva responsabilitat no apropar-te a aquestes espècies de manera activa.
         </li>
         <li>
-            Garanteixes que tens el dret de posar a disposició de l'equip d'investigació qualsevol dada que comparteixis
-            pels fins especificats en el punt 1 anterior i que aquestes dades no són difamatòries, ni infringeixen cap
-            llei.
+            En compartir les teves dades i obres (ex. fotografies) amb el Projecte, acceptes els presents termes d'ús, acceptes que les obres (ex. fotografies) es difonguin de manera anònima sense constar el teu nom o pseudònim i concedeixes als membres del Projecte una llicència sobre la teva obra de durada igual als drets d'autor vigents aplicables per poder explotar l'obra sense cap restricció i cedir-la a tercers en tot el món, lliure de royalties, no-exclusiva i sub-llicenciable. En qualsevol cas, aquests termes no impliquen per a l'autor original cap restricció sobre l'ús de les seves obres, i pot explotar-la per altres mitjans de manera compatible a la cessió concedida per aquest document.
         </li>
         <li>
-            Acceptes indemnitzar el Laboratori d'Ecologia del Moviment i els seus membres i col·laboradors per qualsevol
-            càrrega legal i/o monetària o per qualsevol altra despesa en la que puguessin incórrer com a resultat del
-            teu incompliment de la garantia anterior.
+            Per norma general, qualsevol creació original protegible per drets d'autor serà difosa pel Projecte amb llicència CC-BY, indicant autor anònim i el nom del Projecte (exemple: Anònim, CC-by Mosquito Alert), i encara que aquestes continguin nom d'autor o l’autor consti en les seves metadades. Quan sigui possible, part de les bases de dades o taules resultants de les contribucions dels usuaris seran difoses, per norma general, sota llicència CC0. En el cas que sigui necessari l'accés o cessió a terceres persones (professionals encarregats del seguiment i control d'aquests mosquits, personal investigador, gestors de salut pública, etc.) d'informació recopilada pel Projecte i considerada sensible (no difosa sota llicència CC0 ), s'establiran els protocols i / o llicències adequades per a la seva difusió.
         </li>
         <li>
-            Renuncies a qualsevol dret moral en relació a la teva contribució per als fins especificats en el punt 1
-            anterior.
+            Garanteixes que tens els drets legals necessaris sobre les dades i les obres que comparteixes amb el Projecte i que aquestes no són difamatòries, ni infringeixen cap llei. La participació al Projecte és anònima per garantir la protecció de la privacitat dels participants. Per això, garanteixes que no afegiràs informació personal teva o de terceres persones en les dades o obres que envies al Projecte. Entens que aquestes dades o obres poden ser cedides a tercers, i que des del Projecte no es pot garantir la capacitat d'eliminar qualsevol possible dada personal que enviïs per error.
+        </li>
+        <li>
+            Acceptes indemnitzar els particulars, a les institucions i/o als membres del Projecte i col·laboradors de qualsevol càrrega legal i/o monetària i de qualsevol altra despesa en què pogués incórrer com a resultat del teu incompliment de la garantia anterior.
         </li>
     </ol>
 
