--- a/tigahelp/templates/tigahelp/terms_es.html
+++ b/tigahelp/templates/tigahelp/terms_es.html
@@ -12,40 +12,24 @@
         <h2>Acuerdo del usuario</h2>
     </div>
 
-
-    <p>Mosquito Alert es un proyecto de ciencia ciudadana coordinado por el ICREA-Laboratorio de Ecología del
-        Movimiento del Centro de Estudios Avanzados de Blanes perteneciente al Consejo Superior de Investigaciones
-        Científicas (CEAB-CSIC). Participa también el Consejo Superior de Investigaciones Científicas y la Universidad
-        de Murcia.</p>
-
-    <p>El proyecto depende de la recogida de datos por parte de la ciudadanía&mdash;ciudadanos científicos&mdash;sobre
-        el mosquito tigre y el mosquito de la fiebre amarilla. Los ciudadanos participan compartiendo datos a través de las distintas aplicaciones
-        Mosquito Alert para dispositivos móviles. Para ello, será necesario ser mayor de edad o participar bajo la
-        supervisión de un adulto y estar de acuerdo con la política de privacidad de Mosquito Alert, así como con los
-        siguientes términos: </p>
-
+    <p>Mosquito Alert (de ahora en adelante, “el Proyecto”, en cualquiera de los nombres que haya podido tener en el pasado o pudiera adquirir en el futuro) es un proyecto de ciencia ciudadana coordinado por el Centro de Estudios Avanzados de Blanes perteneciente al Consejo Superior de Investigaciones Científicas (CEAB-CSIC) y el CREAF.</p>
+    <p>El Proyecto depende de la recogida de datos por parte de la ciudadanía sobre el mosquito tigre y el mosquito de la fiebre amarilla. Los ciudadanos participan enviando y compartiendo, entre otros, datos e imágenes, a través de las distintas aplicaciones del Proyecto para dispositivos móviles u otros dispositivos electrónicos. Para ello, será necesario ser mayor de edad o participar bajo la supervisión de un adulto y estar de acuerdo con la política de privacidad del Proyecto, así como con los siguientes términos de uso:</p>
 
     <ol>
         <li>
-            Al compartir tus datos con el proyecto Mosquito Alert, concedes a los miembros del equipo de investigación
-            una licencia perpetua, libre de royaltys, no-exclusiva y sub-licenciable, para: usar, reproducir, modificar,
-            adaptar, publicar, traducir, crear trabajos derivados, distribuir y ejercer todos los derechos de autor y de
-            publicidad en todo el mundo respecto a tu contribución y/o incorporar tu contribución en otros trabajos en
-            cualquier medio conocido actualmente o desarrollado en el futuro.
+            El mosquito tigre y el mosquito de la fiebre amarilla pueden ser vectores de enfermedades como el dengue, el chikunguña o el zika. El Proyecto contribuye en su lucha, a partir de la recogida de datos e imágenes (entre otros), el análisis o estudio de esta información y la puesta en marcha o colaboración con acciones de sensibilización, seguimiento o control. Al ser vectores de enfermedades, al participar en el Proyecto debes extremar precauciones y no acercarte de forma activa a estas especies (directamente o a través de sus lugares de cría). En el sitio web del Proyecto se informa de cómo enviar datos y fotografías, entre otros, atrapando previamente a estas especies para evitar su picadura. Aceptas que es tu responsabilidad no acercarte a estas especies de manera activa.
         </li>
         <li>
-            Garantizas que tienes el derecho de poner a disposición del equipo de investigación cualquier dato que
-            compartas para los fines especificados en el punto 1 anterior y que estos datos no son difamatorios, ni
-            infringen ninguna ley.
+            Al compartir tus datos y obras (ej. fotografías) con el Proyecto, das tu conformidad a los presentes términos de uso, aceptas que las obras (ej. fotografías) se difundan de manera anónima sin constar tu nombre o seudónimo y concedes a los miembros del Proyecto una licencia sobre tu obra de duración igual a los derechos de autor vigentes aplicables para poder explotar la obra sin ninguna restricción y cederla a terceros en todo el mundo, libre de royalties, no-exclusiva y sub-licenciable. En cualquier caso, estos términos no implican para el autor original ninguna restricción sobre el uso de sus obras, pudiendo explotarla por otros medios de manera compatible a la cesión concedida por este documento.
         </li>
         <li>
-            Aceptas indemnizar el Laboratorio de Ecología del Movimiento y a sus miembros y colaboradores de cualquier
-            carga legal y/o monetaria y de cualquier otro gasto en el que pudiera incurrir como resultado de tu
-            incumplimiento de la garantía anterior.
+            Por norma general, cualquier creación original protegible por derechos de autor será difundida por el Proyecto con licencia CC-BY,  indicando autor anónimo y el nombre del proyecto (ejemplo: Anónimo, CC-by Mosquito Alert), y aunque estas contengan nombre de autor en ellas o en sus metadatos. Cuando sea posible, parte de las bases de datos o tablas resultantes de las contribuciones de los usuarios serán difundidas, por norma general, bajo licencia CC0. En el caso que se requiera el acceso o cesión a terceras personas (profesionales encargados del seguimiento y control de estos mosquitos, personal investigador, gestores de salud pública, etc.) de información recopilada por el Proyecto y considerada sensible (no difundida bajo licencia CC0), se establecerán los protocolos y/o licencias adecuadas para su difusión.
         </li>
         <li>
-            Renuncias a cualquier derecho moral en relación a tu contribución para los fines especificados en el punto 1
-            anterior.
+            Garantizas que tienes los derechos legales necesarios sobre los datos y las obras que compartes con el Proyecto y que éstos no son difamatorios, ni infringen ninguna ley. La participación al Proyecto es anónima para garantizar la protección de la privacidad de los participantes. Por eso, garantizas que no añadirás información personal tuya o de terceras personas en los datos u obras que envíes al Proyecto. Entiendes que estos datos u obras pueden ser cedidos a terceros, y que desde el Proyecto no se puede garantizar la capacidad de eliminar cualquier posible dato personal que envíes por error.
+        </li>
+        <li>
+            5. Aceptas indemnizar a los particulares, a las instituciones y/o a los  miembros del Proyecto y colaboradores de cualquier carga legal y/o monetaria y de cualquier otro gasto en el que pudiera incurrir como resultado de tu incumplimiento de la garantía anterior.
         </li>
     </ol>
 
