--- a/tigahelp/templates/tigahelp/about_ca.html
+++ b/tigahelp/templates/tigahelp/about_ca.html
@@ -14,7 +14,7 @@
 
     <p>Aquest projecte està coordinat per les institucions <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> i <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class="centeredImage">
-        <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_coord.jpg" %}></a>
+        <img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_coord.jpg" %}>
     </p>
     <p>Des de 2015 el projecte està impulsat per l’ <a href="http://obrasociallacaixa.org/">Obra Social “la Caixa”</a>.</p>
     <p class="centeredImage">
@@ -23,7 +23,7 @@
     <br>
     <p>El projecte està cofinançat per l’ <a href="http://www.dipsalut.cat">Organisme Autònom de Salut Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministeri d’Economia i Competitivitat</a> i la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a>.</p>
     <p class="centeredImage">
-        <a href="/credits/"><img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_financ.jpg" %}></a>
+        <img style="max-width: 100%; height: auto;" src={% static "tigahelp/logo_financ.jpg" %}>
     </p>
 
 {% endblock %}
