--- a/tigahelp/templates/tigahelp/help_ca.html
+++ b/tigahelp/templates/tigahelp/help_ca.html
@@ -9,28 +9,35 @@
 {% block content %}
 
     <h1>PARTICIPA</h1>
-Participa en l'estudi i seguiment a temps real del mosquit tigre (<i>Aedes albopictus</i>) i del mosuqit de la febre groga (<i>Aedes aegypti</i>), enviant troballes d’aquestes dues espècies i dels seus llocs de cria. Informa't de les últimes novetats i aprèn a combatre aquestes espècies a casa teva.
+    Lluita contra els mosquits que transmeten malalties. Si veus un mosquit tigre (<i>Aedes albopictus</i>) o un mosquit de la febre groga (<i>Aedes aegypti</i>) notifica-ho amb l’app Mosquito Alert. També pots avisar si veus un lloc de cria a la via pública.
 
-    <h2>Familiaritza't amb <i>Ae. albopictus</i> i <i>Ae. aegypti</i></h2>
-Aprèn a reconèixer aquestes dues espècies (assegura't que no les confons amb altres mosquits). Familiaritza't amb el seu cicle de vida i amb els llocs on cria. L'App i la web del projecte <a  href="http://mosquitoalert.com">mosquitoalert.com</a> contenen tota la informació necessària perquè les teves dades siguin de qualitat.
+    <h2>Aprèn a identificar aquests mosquits</h2>
+    T’ensenyem a diferenciar-los d’altres mosquits d’una manera molt senzilla a la nostra pàgina web <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Consulta els nostres trucs per fer bones fotos.
 
-    <h2>Participa compartint dades</h2>
-Utilitza els botons “ENVIA” per enviar informes de nous llocs de cria en espais públics i de troballes de mosquit tigre o del mosquit de la febre groga. Trobaràs informació detallada clicant l'icona (i).
+    <h2>Envia les teves troballes</h2>
+    Utilitza els botons “ENVIA” per enviar informes de llocs de cria en espais públics i informes de mosquit tigre o de mosquit de la febre groga. Trobaràs més informació a la icona (i).
 
-    <h2>Mantén les teves dades actualitzades</h2>
-Utilitza el botó “EL MEU MAPA” per veure i controlar les teves dades, editar-les si les vols actualitzar o corregir i eliminar-les si creus que són errònies.
+    <h2>Actualitza els teus informes</h2>
+    Si vols modificar o eliminar algun informe, entra a “EL MEU MAPA” i selecciona’l.
 
-    <h2>Participa en missions</h2>
-Si utilitzes la versió Android de Mosquito Alert, participa en missions especials si t'apareix una icona especial al teu telèfon. En qualsevol moment podràs realitzar la missió, deixar-la per més tard, o eliminar-la si no vols participar-hi. Consulta les missions pendents al menú principal.
+    <h2>Participa a les missions</h2>
+    Al llarg de al temporada rebràs missions especials al teu mòbil. En qualsevol moment podràs realitzar la missió, deixar-la per més endavant o eliminar-la si no vols fer-la. Podràs veure les missions pendents al menú principal.
 
     <h2>Explora altres opcions</h2>
-Explora el botó de configuració a cada pantalla per accedir a opcions extres. Canvia el mapa base, comparteix l'App o consulta les últimes notícies del projecte <a  href="http://mosquitoalert.com">mosquitoalert.com</a>.
+    A cada pantalla podràs accedir a més opcions pitjant el botó de configuració. Per exemple, a “EL MEU MAPA” pots canviar el tipus de mapa, pots compartir l’app des de la pàgina principal o bé pots consultar les últimes notícies de la plataforma <a href="http://mosquitoalert.com">Mosquito Alert</a>.
 
-    <h1>DESTÍ DE LES TEVES DADES</h1>
-Les teves dades s'enviaran al centre de recerca que coordina Mosquito Alert, el Centre d'Estudis Avançats de Blanes del Consell Superior d'Investigacions Científiques (CEAB-CSIC). Les dades s’utilitzen per millorar el coneixement de la dispersió del mosquit tigre i del mosquit de la febre groga i de les ciències ciutadanes i poden ser compartides amb terceres parts o el públic general. Mosquito Alert recull també dades de la posició aproximada del teu telèfon mòbil en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Mosquito Alert i per millorar el coneixement sobre les vies de dispersió del mosquit tigre i del mosquit de la febre groga. Aquestes dades de posició són aproximades, i es recullen arrodonint la teva posició real als 0.05 graus de latitud i longitud més propers. Aquest mètode fa que sigui possible saber que estaves en una àrea aproximadament de la mida d’una ciutat petita com Blanes, però fa que sigui impossible saber la teva posició exacta dins d’aquesta àrea. Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti la teva identificació personal. Part de les teves dades enviades es publiquen de manera automàtica al mapa web a la web del projecte <a href="http://mosquitoalert.com">mosquitoalert.com</a>. En qualsevol moment pots eliminar, editar i actualitzar les dades publicades al mapa web, des del botó “EL MEU MAPA”, seleccionant un informe.
 
-    <h1>CONSULTA SI TENS MÉS DUBTES</h1>
-Consulta la pàgina web o escriu a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>.
+    <h1>ON VAN LES DADES QUE ENVIES?</h1>
+    Els avisos que enviïs a través de l’app, tant si tenen foto com si no, s’envien al servidor de Mosquito Alert i apareixeran de manera automàtica al mapa de la plataforma <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Aquesta informació és molt útil per conèixer la distribució del mosquit tigre i del mosquit de la febre groga. Pot ser compartida amb tercers o amb el públic general.
+
+    L’app Mosquito Alert també recull dades de la posició aproximada del teu dispositiu en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Mosquito Alert i per saber més de les vies de dispersió d’aquests mosquits. Les dades de la posició actual són aproximades i es recullen rodejant la teva posició actual real als 0.05 graus de latitud i longitud més propers. Amb aquest mètode es pot saber la teva ubicació dins d’una àrea de la mida d’una ciutat petita, però en cap cas es sap la teva posició exacta a dins d’aquesta àrea.
+
+    Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti saber la teva identificació personal.
+
+
+
+    <h1>VOLS MÉS INFORMACIÓ?</h1>
+    Visita la nostra pàgina web <a href="http://mosquitoalert.com">mosquitoalert.com</a> o escriu-nos a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
 
 {% endblock %}
 
