--- a/tigahelp/templates/tigahelp/terms_en.html
+++ b/tigahelp/templates/tigahelp/terms_en.html
@@ -12,19 +12,32 @@
         <h2>User Agreement</h2>
     </div>
 
-<p>Mosquito Alert is a citizen science project being implemented by the ICREA-Movement Ecology Laboratory at the
-    Centre for Advanced Studies of Blanes (CEAB-CSIC) in cooperation with the Spanish National Research Council and the University of Murcia.
+    <p>
+        Mosquito Alert (hereinafter, “the Project”, in any of the names it has had in the past or may acquire in the future) is a citizen science project coordinated by the Centre for Advanced Studies of Blanes, part of the Spanish Research Council (CEAB-CSIC),and CREAF.
+    </p>
+    <p>
+        The Project relies on members of the public to collect data on the spread of tiger mosquitoes and yellow fever mosquitoes. You can participate by, among other things, sending and sharing data and images through any of the Project applications for mobile devices or other electronic devices. To do so, you must be an adult or supervised by an adult and you must agree to the Project privacy policy as well as the following terms:
+    </p>
 
-<p>The project relies on members of the public&mdash;citizen scientists&mdash;to collect data on the spread of tiger mosquitoes and yellow fever mosquitoes. You can participate by sharing data through any of the Mosquito Alert applications for mobile devices. To do so, you must be an adult or supervised by an adult and you must agree to the Mosquito Alert privacy policy as well as the following terms:
-<ol>
-   <li>By sharing data with the Mosquito Alert project, you grant the members of the research team a perpetual, royalty-free, non-exclusive, sub-licensable license to: use, reproduce, modify, adapt, publish, translate, create derivative works from, distribute, and exercise all copyright and publicity rights with respect to your contribution worldwide and/or to incorporate your contribution in other works in any media now known or later developed for the full term of any rights that may exist in your contribution.</li>
+    <ol>
+        <li>
+            The tiger and yellow fever mosquitoes can be vectors of diseases such as dengue, chikungunya and zika. The Project contributes to the fight against these diseases by, among other things, collecting data and images, analyzing and studying this information, and collaborating with awareness-raising campaigns and in surveillance and control activities. Since the target species are disease vectors, you must exercise caution while participating in the Project and must not actively approach the mosquitoes directly or through their breeding sites. The Project website contains information on how to send data and pictures by first trapping the species to avoid being bitten. It is your responsibility not to get close to these species proactively.
+        </li>
 
-<li>You warrant that any data you share consists of information you have the right to make available to the research
-     team for the purposes specified in item 1 above, is not defamatory, and does not infringe any law.</li>
+        <li>
+            By sharing your data and works (e.g. pictures) with the Project, you agree on the present terms of use, agree that the works (e.g. pictures) may be released to the public as anonymous works without including your name or pseudonym, and grant the members of the Project a royalty-free, non-exclusive and sub-licensable license for the duration of the current applicable copyright laws to exploit the work without restrictions and transfer it to others worldwide. In any case, these terms do not imply any restriction on your use of your works, as the original author, and you may exploit your works by other means in a manner consistent with the transfer granted by this document.
+        </li>
 
-<li>You indemnify the Movement Ecology Lab and its members and partners against all legal fees, damages and other expenses that may be incurred by them as a result of your breach of the above warranty.</li>
+        <li>
+            Generally, any original creation protectable by copyright will be disseminated by the Project with a CC-BY license, indicating anonymous author and the Project name (example: Anonymous, CC-BY Mosquito Alert), even if the creations contains the author’s name in it or in its metadata. When possible, part of the databases or resulting tables from user contributions will be disseminated, as a general rule, under a CC0 license. In the case of a need to allow access or transfer to third parties (professionals responsible for the monitoring and control of these mosquitoes, researchers, public health managers, etc.) of information collected by the Project and considered sensitive (and not disseminated under a CC0 license), other protocols and/or appropriate licenses will be established.
+        </li>
 
-<li>You waive any moral rights in your contribution for the purposes specified in item 1 above.</li>
+        <li>
+            You warrant that any data or works you share consist of information you have the right to make available to the Project and that this is not defamatory, and does not infringe any law. Participation in the Project is anonymous to ensure the protection of the privacy of the participants. Therefore, you warrant that you will not add personal information of yours or from third parties to the data or works you send to the Project. You understand that the data or works can be transferred to third parties, and that the Project cannot guarantee the capacity to remove any personal data you send by mistake.
+        </li>
+        <li>
+            You indemnify the individuals, institutions and the members of the Project and its partners against all legal fees, damages and other expenses that may be incurred by them as a result of your breach of the above warranty.
+        </li>
 </ol>
 
 
