Fixed type in terms_es

--- a/tigahelp/templates/tigahelp/terms_es.html
+++ b/tigahelp/templates/tigahelp/terms_es.html
@@ -29,7 +29,7 @@
             Garantizas que tienes los derechos legales necesarios sobre los datos y las obras que compartes con el Proyecto y que éstos no son difamatorios, ni infringen ninguna ley. La participación al Proyecto es anónima para garantizar la protección de la privacidad de los participantes. Por eso, garantizas que no añadirás información personal tuya o de terceras personas en los datos u obras que envíes al Proyecto. Entiendes que estos datos u obras pueden ser cedidos a terceros, y que desde el Proyecto no se puede garantizar la capacidad de eliminar cualquier posible dato personal que envíes por error.
         </li>
         <li>
-            5. Aceptas indemnizar a los particulares, a las instituciones y/o a los  miembros del Proyecto y colaboradores de cualquier carga legal y/o monetaria y de cualquier otro gasto en el que pudiera incurrir como resultado de tu incumplimiento de la garantía anterior.
+            Aceptas indemnizar a los particulares, a las instituciones y/o a los  miembros del Proyecto y colaboradores de cualquier carga legal y/o monetaria y de cualquier otro gasto en el que pudiera incurrir como resultado de tu incumplimiento de la garantía anterior.
         </li>
     </ol>
 
