--- a/tigahelp/templates/tigahelp/about_es.html
+++ b/tigahelp/templates/tigahelp/about_es.html
@@ -14,16 +14,16 @@
 
     <p>Este proyecto está coordinado por las instituciones <a href="http://www.creaf.cat/es">CREAF</a>, <a href="http://www.ceab.csic.es">CEAB-CSIC</a> y <a href="http://www.icrea.cat/es">ICREA</a>.</p>
     <p class='centeredImage'>
-        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_coord.jpg" %}>
+        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/logo_coord.jpg" %}">
     </p>
     <p>Desde 2015 el proyecto està impulsado por la <a href="http://obrasociallacaixa.org/">Obra Social “la Caixa”</a>.</p>
     <p class='centeredImage'>
-       <img style='max-width: 100%; height: auto;' src={% static "tigahelp/lacaixa.jpg" %}>
+       <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lacaixa.jpg" %}">
     </p>
     <br>
     <p>El proyecto está cofinanciado por el <a href="http://www.dipsalut.cat">Organismo Autónomo de Salud Pública de la Diputació de Girona (Dipsalut)</a>, el <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministerio de Economía y Competitividad</a> i la <a href="http://www.fecyt.es">Fundación Española para la Ciencia y la Tecnología (FECYT)</a>.</p>
     <p class='centeredImage'>
-        <img style='max-width: 100%; height: auto;' src={% static "tigahelp/logo_financ.jpg" %}>
+        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/logo_financ.jpg" %}">
     </p>
 
 {% endblock %}
