--- a/tigahelp/templates/tigahelp/help_ca.html
+++ b/tigahelp/templates/tigahelp/help_ca.html
@@ -9,35 +9,29 @@
 {% block content %}
 
     <h1>PARTICIPA</h1>
-    Lluita contra els mosquits que transmeten malalties. Si veus un mosquit tigre (<i>Aedes albopictus</i>) o un mosquit de la febre groga (<i>Aedes aegypti</i>) notifica-ho amb l’app Mosquito Alert. També pots avisar si veus un lloc de cria a la via pública.
+    Lluita contra els mosquits que transmeten malalties. Si veus un mosquit tigre (<em>Aedes albopictus</em>) o un mosquit de la febre groga (<em>Aedes aegypti</em>) notifica-ho amb l&rsquo;app Mosquito Alert. Tamb&eacute; pots avisar si veus un lloc de cria a la via p&uacute;blica.
 
-    <h2>Aprèn a identificar aquests mosquits</h2>
-    T’ensenyem a diferenciar-los d’altres mosquits d’una manera molt senzilla a la nostra pàgina web <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Consulta els nostres trucs per fer bones fotos.
-
+    <h2>Apr&egrave;n a identificar aquests mosquits</h2>
+    T&rsquo;ensenyem a diferenciar-los d&rsquo;altres mosquits d&rsquo;una manera molt senzilla a la nostra p&agrave;gina web <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Consulta els nostres trucs per fer bones fotos.
     <h2>Envia les teves troballes</h2>
-    Utilitza els botons “ENVIA” per enviar informes de llocs de cria en espais públics i informes de mosquit tigre o de mosquit de la febre groga. Trobaràs més informació a la icona (i).
-
+    Utilitza els botons &ldquo;ENVIA&rdquo; per enviar informes de llocs de cria en espais p&uacute;blics i informes de mosquit tigre o de mosquit de la febre groga. Trobar&agrave;s m&eacute;s informaci&oacute; a la icona (i).
     <h2>Actualitza els teus informes</h2>
-    Si vols modificar o eliminar algun informe, entra a “EL MEU MAPA” i selecciona’l.
+    Si vols modificar o eliminar algun informe, entra a &ldquo;EL MEU MAPA&rdquo; i selecciona&rsquo;l.
 
-    <h2>Participa a les missions</h2>
-    Al llarg de al temporada rebràs missions especials al teu mòbil. En qualsevol moment podràs realitzar la missió, deixar-la per més endavant o eliminar-la si no vols fer-la. Podràs veure les missions pendents al menú principal.
+    <h2>Valida fotos</h2>
+    Valida fotos d&rsquo;altres participants. No et preocupis si tens dubtes, varies persones avaluen la mateixa foto.
 
+    <h2>Participa a les missions i rep notificacions</h2>
+    Al llarg de al temporada rebr&agrave;s missions especials al teu m&ograve;bil. En qualsevol moment podr&agrave;s realitzar la missi&oacute;, deixar-la per m&eacute;s endavant o eliminar-la si no vols fer-la. Podr&agrave;s veure les missions pendents al men&uacute; principal. Tamb&eacute; rebr&agrave;s notificacions sobre els teus propis informes per part d'entom&ograve;legs experts i informaci&oacute; cient&iacute;fica i de gesti&oacute; (en el teu territori o en altres) sobre aquestes dues esp&egrave;cies.
+    
     <h2>Explora altres opcions</h2>
-    A cada pantalla podràs accedir a més opcions pitjant el botó de configuració. Per exemple, a “EL MEU MAPA” pots canviar el tipus de mapa, pots compartir l’app des de la pàgina principal o bé pots consultar les últimes notícies de la plataforma <a href="http://mosquitoalert.com">Mosquito Alert</a>.
-
-
+    A cada pantalla podr&agrave;s accedir a m&eacute;s opcions pitjant el bot&oacute; de configuraci&oacute;. Per exemple, a &ldquo;EL MEU MAPA&rdquo; pots canviar el tipus de mapa, pots compartir l&rsquo;app des de la p&agrave;gina principal o b&eacute; pots consultar les &uacute;ltimes not&iacute;cies de la plataforma <a href="http://mosquitoalert.com">Mosquito Alert</a>.
+    
     <h1>ON VAN LES DADES QUE ENVIES?</h1>
-    Els avisos que enviïs a través de l’app, tant si tenen foto com si no, s’envien al servidor de Mosquito Alert i apareixeran de manera automàtica al mapa de la plataforma <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Aquesta informació és molt útil per conèixer la distribució del mosquit tigre i del mosquit de la febre groga. Pot ser compartida amb tercers o amb el públic general.
-
-    L’app Mosquito Alert també recull dades de la posició aproximada del teu dispositiu en intervals de temps aleatoris. Aquesta informació s’utilitza per conèixer i generar un mapa de les zones explorades pels usuaris de Mosquito Alert i per saber més de les vies de dispersió d’aquests mosquits. Les dades de la posició actual són aproximades i es recullen rodejant la teva posició actual real als 0.05 graus de latitud i longitud més propers. Amb aquest mètode es pot saber la teva ubicació dins d’una àrea de la mida d’una ciutat petita, però en cap cas es sap la teva posició exacta a dins d’aquesta àrea.
-
-    Les localitzacions estan unides només al teu identificador, generat de manera aleatòria, però a cap informació que permeti saber la teva identificació personal.
-
-
-
-    <h1>VOLS MÉS INFORMACIÓ?</h1>
-    Visita la nostra pàgina web <a href="http://mosquitoalert.com">mosquitoalert.com</a> o escriu-nos a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>
+    Els avisos que envi&iuml;s a trav&eacute;s de l&rsquo;app, tant si tenen foto com si no, s&rsquo;envien al servidor de Mosquito Alert i apareixeran de manera autom&agrave;tica al mapa de la plataforma <a href="http://mosquitoalert.com">mosquitoalert.com</a>. Aquesta informaci&oacute; &eacute;s molt &uacute;til per con&egrave;ixer la distribuci&oacute; del mosquit tigre i del mosquit de la febre groga. Pot ser compartida amb tercers o amb el p&uacute;blic general. L&rsquo;app Mosquito Alert tamb&eacute; recull dades de la posici&oacute; aproximada del teu dispositiu en intervals de temps aleatoris. Aquesta informaci&oacute; s&rsquo;utilitza per con&egrave;ixer i generar un mapa de les zones explorades pels usuaris de Mosquito Alert i per saber m&eacute;s de les vies de dispersi&oacute; d&rsquo;aquests mosquits. Les dades de la posici&oacute; actual s&oacute;n aproximades i es recullen rodejant la teva posici&oacute; actual real als 0.05 graus de latitud i longitud m&eacute;s propers. Amb aquest m&egrave;tode es pot saber la teva ubicaci&oacute; dins d&rsquo;una &agrave;rea de la mida d&rsquo;una ciutat petita, per&ograve; en cap cas es sap la teva posici&oacute; exacta a dins d&rsquo;aquesta &agrave;rea. Les localitzacions estan unides nom&eacute;s al teu identificador, generat de manera aleat&ograve;ria, per&ograve; a cap informaci&oacute; que permeti saber la teva identificaci&oacute; personal.
+    
+    <h1>VOLS M&Eacute;S INFORMACI&Oacute;?</h1>
+    Visita la nostra p&agrave;gina web <a href="http://mosquitoalert.com">mosquitoalert.com</a> o escriu-nos a <a href="mailto:info@mosquitoalert.com">info@mosquitoalert.com</a>    
 
 {% endblock %}
 
