Fixed forgotten string in help_zh

--- a/tigahelp/templates/tigahelp/help_zh.html
+++ b/tigahelp/templates/tigahelp/help_zh.html
@@ -20,7 +20,7 @@
   <h2>及時更新您的報告</h2>
   如果你想編輯或移除任何報告，請選擇"我的地圖"按鈕。於"我的地圖"上的藍點，是你周遭2.5公里範圍內，其他用戶在最近30天發送的報告。<br />
 
-  <h2>Validate pictures</h2>
+  <h2>驗證圖片</h2>
   <p>驗證來自其他參與者的圖片。 如果你不肯定你的答案請不要擔心：所有照片均由幾個人同時進行驗證。</p>
 
   <h2>參與任務和接收通知</h2>
