Updated about files

--- a/tigahelp/templates/tigahelp/about_en.html
+++ b/tigahelp/templates/tigahelp/about_en.html
@@ -21,7 +21,7 @@
        <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/lacaixa.jpg" %}">
     </p>
     <br>
-    <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a>, the <a href="http://www.mineco.gob.es/portal/site/mineco/">Ministry of Economy and Competitiveness</a> and the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a>.</p>
+    <p>The project is co-financed by the <a href="http://www.dipsalut.cat">Independent Public Health Body of Girona Provincial Council (Dipsalut)</a> and the <a href="http://www.fecyt.es/en">Spanish Foundation for Science and Technology (FECYT)</a>.</p>
     <p class='centeredImage'>
         <img style='max-width: 100%; height: auto;' src="{% static "tigahelp/logo_financ.jpg" %}">
     </p>
