--- a/tigahelp/templates/tigahelp/policies.html
+++ b/tigahelp/templates/tigahelp/policies.html
@@ -7,7 +7,7 @@
 <head>
     <meta name="viewport" content="initial-scale=1.0, user-scalable=no"/>
     <meta http-equiv="content-type" content="text/html; charset=UTF-8"/>
-    <title>Tigatrapp Policies</title>
+    <title>Mosquito Alert Policies</title>
 
     <link rel="stylesheet" href={% static "tigahelp/pure-min.css" %}>
 
